# OpenglLearn

./: CMakeLists.txt  main.cpp
Src/: MyClock.cpp  MyClock.h
